--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@anypoint-web-components/anypoint-button",
   "description": "Anypoint styled button.",
+  "version": "1.0.0",
   "license": "Apache-2.0",
   "main": "anypoint-button.js",
   "keywords": [
