--- a/package.json
+++ b/package.json
@@ -3,18 +3,17 @@
   "description": "Anypoint styled button.",
   "version": "1.0.15",
   "license": "Apache-2.0",
-  "main": "anypoint-button.js",
+  "main": "index.js",
+  "module": "index.js",
   "keywords": [
     "web-components",
     "anypoint",
     "button"
   ],
   "authors": [
-    "Pawel Psztyc",
-    "The Advanced REST client authors <arc@mulesoft.com>"
+    "Pawel Psztyc"
   ],
   "contributors": [
-    "Pawel Psztyc",
     "The Advanced REST client authors <arc@mulesoft.com>"
   ],
   "repository": {
@@ -26,52 +25,77 @@
     "email": "arc@mulesoft.com"
   },
   "dependencies": {
-    "@anypoint-web-components/anypoint-control-mixins": "^1.0.2",
-    "@polymer/paper-ripple": "^3.0.1",
-    "lit-element": "^2.2.1"
+    "@anypoint-web-components/anypoint-control-mixins": "^1.1.1",
+    "@polymer/paper-ripple": "^3.0.2",
+    "lit-element": "^2.3.1"
   },
   "devDependencies": {
-    "@advanced-rest-client/arc-demo-helper": "^1.0.16",
-    "@advanced-rest-client/eslint-config": "^1.1.3",
-    "@advanced-rest-client/prettier-config": "^0.1.0",
-    "@advanced-rest-client/testing-karma-sl": "^1.1.0",
+    "@advanced-rest-client/arc-demo-helper": "^1.0.17",
+    "@advanced-rest-client/testing-karma-sl": "^1.3.1",
     "@anypoint-web-components/anypoint-checkbox": "^1.0.2",
     "@anypoint-web-components/anypoint-icons": "^1.0.1",
     "@anypoint-web-components/anypoint-styles": "^1.0.1",
-    "@commitlint/cli": "^8.2.0",
-    "@commitlint/config-conventional": "^8.2.0",
-    "@open-wc/testing": "^2.4.1",
-    "@open-wc/testing-karma": "^3.2.9",
-    "@polymer/gen-typescript-declarations": "^1.6.2",
+    "@open-wc/eslint-config": "^2.0.0",
+    "@open-wc/testing": "^2.5.16",
+    "@open-wc/testing-karma": "^3.3.19",
     "@polymer/iron-icon": "^3.0.1",
     "@polymer/iron-icons": "^3.0.1",
     "@polymer/iron-test-helpers": "^3.0.1",
     "deepmerge": "^4.2.2",
-    "es-dev-server": "^1.28.0",
-    "husky": "^3.1.0",
-    "karma": "^4.4.1",
-    "lint-staged": "^9.5.0",
-    "sinon": "^7.5.0"
+    "es-dev-server": "^1.48.1",
+    "eslint": "^6.1.0",
+    "eslint-config-prettier": "^6.11.0",
+    "husky": "^4.2.5",
+    "lint-staged": "^10.2.2",
+    "prettier": "^2.0.4",
+    "sinon": "^9.0.2",
+    "typescript-lit-html-plugin": "^0.9.0"
   },
   "scripts": {
-    "test": "karma start --coverage",
-    "update-types": "gen-typescript-declarations --deleteExisting --outDir . --verify",
     "start": "es-dev-server --app-index demo/index.html --node-resolve --open --watch",
-    "start:compatibility": "es-dev-server --app-index demo/index.html --compatibility all --node-resolve --open --watch",
-    "lint:eslint": "eslint --ext .js,.html .",
-    "format:eslint": "eslint --ext .js,.html . --fix",
-    "lint:prettier": "prettier \"**/*.js\" --list-different || (echo '↑↑ these files are not prettier formatted ↑↑' && exit 1)",
-    "format:prettier": "prettier \"**/*.js\" --write",
+    "lint:eslint": "eslint --ext .js,.html . --ignore-path .gitignore",
+    "format:eslint": "eslint --ext .js,.html . --fix --ignore-path .gitignore",
+    "lint:prettier": "prettier \"**/*.js\" --check --ignore-path .gitignore",
+    "format:prettier": "prettier \"**/*.js\" --write --ignore-path .gitignore",
     "lint": "npm run lint:eslint && npm run lint:prettier",
     "format": "npm run format:eslint && npm run format:prettier",
+    "test": "karma start --coverage",
     "test:watch": "karma start --auto-watch=true --single-run=false",
-    "test:legacy": "karma start --legacy --coverage",
-    "test:legacy:watch": "karma start --legacy --auto-watch=true --single-run=false",
-    "test:sl": "karma start karma.sl.config.js --legacy --coverage"
+    "test:sl": "karma start karma.sl.config.js --compatibility auto --coverage"
+  },
+  "eslintConfig": {
+    "extends": [
+      "@open-wc/eslint-config",
+      "eslint-config-prettier"
+    ],
+    "overrides": [
+      {
+        "files": [
+          "**/demo/**/*.js",
+          "**/demo/**/*.html"
+        ],
+        "rules": {
+          "no-console": "off",
+          "no-unused-expressions": "off",
+          "class-methods-use-this": "off",
+          "import/no-extraneous-dependencies": "off"
+        }
+      }
+    ]
+  },
+  "prettier": {
+    "singleQuote": true,
+    "arrowParens": "avoid"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
   },
   "lint-staged": {
     "*.js": [
       "eslint --fix",
+      "prettier --write",
       "git add"
     ]
   }
