--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@anypoint-web-components/anypoint-button",
   "description": "Anypoint styled button.",
-  "version": "1.1.1",
+  "version": "1.2.1",
   "license": "Apache-2.0",
   "main": "index.js",
   "module": "index.js",
@@ -10,11 +10,12 @@
     "anypoint",
     "button"
   ],
-  "authors": [
-    "Pawel Psztyc"
-  ],
+  "author": {
+    "name": "Pawel Psztyc",
+    "email": "arc@mulesoft.com"
+  },
   "contributors": [
-    "The Advanced REST client authors <arc@mulesoft.com>"
+    "Your name can be here!"
   ],
   "repository": {
     "type": "git",
@@ -25,67 +26,47 @@
     "email": "arc@mulesoft.com"
   },
   "dependencies": {
-    "@anypoint-web-components/anypoint-control-mixins": "^1.1.1",
+    "@anypoint-web-components/anypoint-control-mixins": "^1.2.0",
     "@polymer/paper-ripple": "^3.0.2",
-    "lit-element": "^2.3.1"
+    "lit-element": "^2.5.1"
   },
   "devDependencies": {
     "@advanced-rest-client/arc-demo-helper": "^1.0.17",
-    "@advanced-rest-client/testing-karma-sl": "^1.3.1",
-    "@anypoint-web-components/anypoint-checkbox": "^1.0.2",
+    "@anypoint-web-components/anypoint-checkbox": "^1.2.0",
     "@anypoint-web-components/anypoint-icons": "^1.0.1",
     "@anypoint-web-components/anypoint-styles": "^1.0.1",
-    "@open-wc/eslint-config": "^2.0.0",
-    "@open-wc/testing": "^2.5.16",
-    "@open-wc/testing-karma": "^3.3.19",
+    "@open-wc/eslint-config": "^4.3.0",
+    "@open-wc/testing": "^2.5.33",
     "@polymer/iron-icon": "^3.0.1",
     "@polymer/iron-icons": "^3.0.1",
     "@polymer/iron-test-helpers": "^3.0.1",
-    "deepmerge": "^4.2.2",
-    "es-dev-server": "^1.48.1",
-    "eslint": "^6.1.0",
-    "eslint-config-prettier": "^6.11.0",
-    "husky": "^4.2.5",
-    "lint-staged": "^10.2.2",
-    "prettier": "^2.0.4",
-    "sinon": "^9.0.2",
+    "@web/dev-server": "^0.1.17",
+    "@web/test-runner": "^0.13.5",
+    "@web/test-runner-playwright": "^0.8.6",
+    "eslint": "^7.27.0",
+    "eslint-config-prettier": "^8.3.0",
+    "husky": "^6.0.0",
+    "lint-staged": "^11.0.0",
+    "sinon": "^11.1.1",
+    "typescript": "^4.3.2",
     "typescript-lit-html-plugin": "^0.9.0"
   },
   "scripts": {
-    "start": "es-dev-server --app-index demo/index.html --node-resolve --open --watch",
+    "start": "web-dev-server --app-index demo/index.html --node-resolve --open --watch --root-dir .",
     "lint:eslint": "eslint --ext .js,.html . --ignore-path .gitignore",
     "format:eslint": "eslint --ext .js,.html . --fix --ignore-path .gitignore",
-    "lint:prettier": "prettier \"**/*.js\" --check --ignore-path .gitignore",
-    "format:prettier": "prettier \"**/*.js\" --write --ignore-path .gitignore",
-    "lint": "npm run lint:eslint && npm run lint:prettier",
-    "format": "npm run format:eslint && npm run format:prettier",
-    "test": "karma start --coverage",
-    "test:watch": "karma start --auto-watch=true --single-run=false",
-    "test:sl": "karma start karma.sl.config.js --compatibility auto --coverage"
+    "lint:types": "tsc",
+    "lint": "npm run lint:eslint",
+    "format": "npm run format:eslint",
+    "test": "web-test-runner test/**/*.test.js --coverage --node-resolve --playwright --browsers chromium",
+    "test:watch": "web-test-runner test/**/*.test.js --node-resolve --watch --playwright --browsers chromium",
+    "gen:wc": "wca analyze \"*.js\" --outFile custom-elements.json"
   },
   "eslintConfig": {
     "extends": [
       "@open-wc/eslint-config",
       "eslint-config-prettier"
-    ],
-    "overrides": [
-      {
-        "files": [
-          "**/demo/**/*.js",
-          "**/demo/**/*.html"
-        ],
-        "rules": {
-          "no-console": "off",
-          "no-unused-expressions": "off",
-          "class-methods-use-this": "off",
-          "import/no-extraneous-dependencies": "off"
-        }
-      }
     ]
-  },
-  "prettier": {
-    "singleQuote": true,
-    "arrowParens": "avoid"
   },
   "husky": {
     "hooks": {
@@ -94,9 +75,7 @@
   },
   "lint-staged": {
     "*.js": [
-      "eslint --fix",
-      "prettier --write",
-      "git add"
+      "eslint --fix"
     ]
   }
 }
