--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@anypoint-web-components/anypoint-button",
   "description": "Anypoint styled button.",
-  "version": "1.2.1",
+  "version": "1.2.2",
   "license": "Apache-2.0",
   "main": "index.js",
   "module": "index.js",
@@ -11,7 +11,7 @@
     "button"
   ],
   "author": {
-    "name": "Pawel Psztyc",
+    "name": "Pawel Uchida-Psztyc",
     "email": "arc@mulesoft.com"
   },
   "contributors": [
@@ -27,12 +27,12 @@
   },
   "dependencies": {
     "@anypoint-web-components/anypoint-control-mixins": "^1.2.0",
-    "@polymer/paper-ripple": "^3.0.2",
+    "@anypoint-web-components/material-ripple": "^1.0.1",
     "lit-element": "^2.5.1"
   },
   "devDependencies": {
     "@advanced-rest-client/arc-demo-helper": "^1.0.17",
-    "@anypoint-web-components/anypoint-checkbox": "^1.2.0",
+    "@anypoint-web-components/anypoint-checkbox": "^1.2.1",
     "@anypoint-web-components/anypoint-icons": "^1.0.1",
     "@anypoint-web-components/anypoint-styles": "^1.0.1",
     "@open-wc/eslint-config": "^4.3.0",
@@ -40,15 +40,15 @@
     "@polymer/iron-icon": "^3.0.1",
     "@polymer/iron-icons": "^3.0.1",
     "@polymer/iron-test-helpers": "^3.0.1",
-    "@web/dev-server": "^0.1.17",
-    "@web/test-runner": "^0.13.5",
+    "@web/dev-server": "^0.1.18",
+    "@web/test-runner": "^0.13.13",
     "@web/test-runner-playwright": "^0.8.6",
-    "eslint": "^7.27.0",
+    "eslint": "^7.30.0",
     "eslint-config-prettier": "^8.3.0",
-    "husky": "^6.0.0",
+    "husky": "^7.0.1",
     "lint-staged": "^11.0.0",
     "sinon": "^11.1.1",
-    "typescript": "^4.3.2",
+    "typescript": "^4.3.5",
     "typescript-lit-html-plugin": "^0.9.0"
   },
   "scripts": {
